docs: add ErrorMessage model to swagger
