# pkg/gateways/http/account/get_account_balance.go
@@ -17,8 +17,8 @@ import (
 // @Accept json
 // @Produce json
 // @Success 200 {object} balanceResponse
-// @Failure 400 {string} string "Account does not exist"
-// @Failure 500 {string} string "Internal server error"
+// @Failure 400 {object} responses.ErrorResponse
+// @Failure 500 {object} responses.ErrorResponse
 // @Router /accounts/{accountID}/balance [GET]
 func (h Handler) GetAccountBalance(w http.ResponseWriter, r *http.Request) {
 	accountID := vos.ConvertStringToID(chi.URLParam(r, "accountID"))
